samples/_failures_safe/1761363058_ff60b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25465985.c: In function ‘main’:
./samples/SAFE/__tmp_25465985.c:152:5: error: expected expression at end of input
  152 |     mat2.cols = read_int("Enter number of columns (1-100): ",
      |     ^~~~
./samples/SAFE/__tmp_25465985.c:152:17: error: too few arguments to function ‘read_int’
  152 |     mat2.cols = read_int("Enter number of columns (1-100): ",
      |                 ^~~~~~~~
./samples/SAFE/__tmp_25465985.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_25465985.c:152:5: error: expected declaration or statement at end of input
  152 |     mat2.cols = read_int("Enter number of columns (1-100): ",
      |     ^~~~
